--- a/README.Rmd
+++ b/README.Rmd
@@ -13,81 +13,65 @@ knitr::opts_chunk$set(
 )
 ```
 
-# MyBioconductorPackage
+# iSEEpathways
 
 <!-- badges: start -->
-[![GitHub issues](https://img.shields.io/github/issues/kevinrue/MyBioconductorPackage)](https://github.com/kevinrue/MyBioconductorPackage/issues)
-[![GitHub pulls](https://img.shields.io/github/issues-pr/kevinrue/MyBioconductorPackage)](https://github.com/kevinrue/MyBioconductorPackage/pulls)
+[![GitHub issues](https://img.shields.io/github/issues/iSEE/iSEEpathways)](https://github.com/iSEE/iSEEpathways/issues)
+[![GitHub pulls](https://img.shields.io/github/issues-pr/iSEE/iSEEpathways)](https://github.com/iSEE/iSEEpathways/pulls)
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
-[![R-CMD-check-bioc](https://github.com/kevinrue/MyBioconductorPackage/workflows/R-CMD-check-bioc/badge.svg)](https://github.com/kevinrue/MyBioconductorPackage/actions)
-[![Codecov test coverage](https://codecov.io/gh/kevinrue/MyBioconductorPackage/branch/main/graph/badge.svg)](https://app.codecov.io/gh/kevinrue/MyBioconductorPackage?branch=main)
+[![R-CMD-check-bioc](https://github.com/iSEE/iSEEpathways/workflows/R-CMD-check-bioc/badge.svg)](https://github.com/iSEE/iSEEpathways/actions)
+[![Codecov test coverage](https://codecov.io/gh/iSEE/iSEEpathways/branch/main/graph/badge.svg)](https://app.codecov.io/gh/iSEE/iSEEpathways?branch=main)
 <!-- badges: end -->
 
-The goal of `MyBioconductorPackage` is to ...
+The goal of `iSEEpathways` is to provide panels to facilitate the interactive visualisation of pathway analysis results in `r BiocStyle::Biocpkg("iSEE")` applications.
 
 ## Installation instructions
 
-Get the latest stable `R` release from [CRAN](http://cran.r-project.org/). Then install `MyBioconductorPackage` from [Bioconductor](http://bioconductor.org/) using the following code:
+Get the latest stable `R` release from [CRAN](http://cran.r-project.org/). Then install `iSEEpathways` from [Bioconductor](http://bioconductor.org/) using the following code:
 
 ```{r 'install', eval = FALSE}
 if (!requireNamespace("BiocManager", quietly = TRUE)) {
     install.packages("BiocManager")
 }
 
-BiocManager::install("MyBioconductorPackage")
+BiocManager::install("iSEEpathways")
 ```
 
-And the development version from [GitHub](https://github.com/kevinrue/MyBioconductorPackage) with:
+And the development version from [GitHub](https://github.com/iSEE/iSEEpathways) with:
 
 ```{r 'install_dev', eval = FALSE}
-BiocManager::install("kevinrue/MyBioconductorPackage")
+BiocManager::install("iSEE/iSEEpathways")
 ```
 
 ## Example
 
-This is a basic example which shows you how to solve a common problem:
+This is a basic example which shows you how to load the package:
 
-```{r example, eval = requireNamespace('MyBioconductorPackage')}
-library("MyBioconductorPackage")
+```{r example, eval = requireNamespace('iSEEpathways')}
+library("iSEEpathways")
 ## basic example code
 ```
 
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
-
-```{r cars}
-summary(cars)
-```
-
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub!
-
 ## Citation
 
-Below is the citation output from using `citation('MyBioconductorPackage')` in R. Please
-run this yourself to check for any updates on how to cite __MyBioconductorPackage__.
+Below is the citation output from using `citation('iSEEpathways')` in R. Please
+run this yourself to check for any updates on how to cite __iSEEpathways__.
 
-```{r 'citation', eval = requireNamespace('MyBioconductorPackage')}
-print(citation('MyBioconductorPackage'), bibtex = TRUE)
+```{r 'citation', eval = requireNamespace('iSEEpathways')}
+print(citation('iSEEpathways'), bibtex = TRUE)
 ```
 
-Please note that the `MyBioconductorPackage` was only made possible thanks to many other R and bioinformatics software authors, which are cited either in the vignettes and/or the paper(s) describing this package.
+Please note that the `iSEEpathways` was only made possible thanks to many other R and bioinformatics software authors, which are cited either in the vignettes and/or the paper(s) describing this package.
 
 ## Code of Conduct
 
-Please note that the `MyBioconductorPackage` project is released with a [Contributor Code of Conduct](http://bioconductor.org/about/code-of-conduct/). By contributing to this project, you agree to abide by its terms.
+Please note that the `iSEEpathways` project is released with a [Contributor Code of Conduct](http://bioconductor.org/about/code-of-conduct/). By contributing to this project, you agree to abide by its terms.
 
 ## Development tools
 
 * Continuous code testing is possible thanks to [GitHub actions](https://www.tidyverse.org/blog/2020/04/usethis-1-6-0/)  through `r BiocStyle::CRANpkg('usethis')`, `r BiocStyle::CRANpkg('remotes')`, and `r BiocStyle::CRANpkg('rcmdcheck')` customized to use [Bioconductor's docker containers](https://www.bioconductor.org/help/docker/) and `r BiocStyle::Biocpkg('BiocCheck')`.
 * Code coverage assessment is possible thanks to [codecov](https://codecov.io/gh) and `r BiocStyle::CRANpkg('covr')`.
-* The [documentation website](http://kevinrue.github.io/MyBioconductorPackage) is automatically updated thanks to `r BiocStyle::CRANpkg('pkgdown')`.
+* The [documentation website](http://iSEE.github.io/iSEEpathways) is automatically updated thanks to `r BiocStyle::CRANpkg('pkgdown')`.
 * The code is styled automatically thanks to `r BiocStyle::CRANpkg('styler')`.
 * The documentation is formatted thanks to `r BiocStyle::CRANpkg('devtools')` and `r BiocStyle::CRANpkg('roxygen2')`.
 
@@ -97,4 +81,4 @@ This package was developed using `r BiocStyle::Biocpkg('biocthis')`.
 
 ## Code of Conduct
 
-Please note that the MyBioconductorPackage project is released with a [Contributor Code of Conduct](http://bioconductor.org/about/code-of-conduct/). By contributing to this project, you agree to abide by its terms.
+Please note that the iSEEpathways project is released with a [Contributor Code of Conduct](http://bioconductor.org/about/code-of-conduct/). By contributing to this project, you agree to abide by its terms.
