--- a/vignettes/iSEEpathways.Rmd
+++ b/vignettes/iSEEpathways.Rmd
@@ -90,6 +90,58 @@ citation("iSEEpathways")
 
 ```{r "start", message=FALSE}
 library("iSEEpathways")
+library("org.Hs.eg.db")
+library("fgsea")
+library("iSEE")
+
+# Example data ----
+
+## Pathways
+pathways <- select(org.Hs.eg.db, keys(org.Hs.eg.db, "SYMBOL"), c("GOALL"), keytype = "SYMBOL")
+pathways <- subset(pathways, ONTOLOGYALL == "BP")
+pathways <- unique(pathways[, c("SYMBOL", "GOALL")])
+pathways <- split(pathways$SYMBOL, pathways$GOALL)
+len_pathways <- lengths(pathways)
+pathways <- pathways[len_pathways > 15 & len_pathways < 500]
+
+## Features
+set.seed(1)
+# simulate a score for all genes found across all pathways
+feature_stats <- rnorm(length(unique(unlist(pathways))))
+names(feature_stats) <- unique(unlist(pathways))
+# arbitrarily select a pathway to simulate enrichment
+pathway_id <- "GO:0046324"
+pathway_genes <- pathways[[pathway_id]]
+# increase score of genes in the selected pathway
+feature_stats[pathway_genes] <- feature_stats[pathway_genes] + 1
+
+# fgsea ----
+
+set.seed(42)
+fgseaRes <- fgsea(pathways = pathways, 
+                  stats    = feature_stats,
+                  minSize  = 15,
+                  maxSize  = 500)
+head(fgseaRes[order(pval), ])
+
+# iSEE ---
+
+ngenes <- length(feature_stats)
+cnts <- matrix(rnbinom(n=ngenes*2, mu=100, size=1/0.5), nrow=ngenes)
+rownames(cnts) <- names(feature_stats)
+se <- SummarizedExperiment(assay = list(counts = cnts))
+
+fgseaRes <- as.data.frame(fgseaRes)
+rownames(fgseaRes) <- fgseaRes$pathway
+metadata(se) <- list("iSEEpathways" = list("fgsea" = fgseaRes))
+
+app <- iSEE(se, initial = list(
+  PathwaysTable(ResultName="fgsea", PanelWidth = 12L)
+))
+
+if (interactive()) {
+  shiny::runApp(app)
+}
 ```
 
 
