demonstrate speedup at the cost of memory usage

--- a/vignettes/integration.Rmd
+++ b/vignettes/integration.Rmd
@@ -125,14 +125,15 @@ pathways <- split(pathways$SYMBOL, pathways$GOALL)
 ```
 
 Separately, we define and register a function that fetches the gene identifiers associated with a given pathway identifier.
+The function definition must include an ellipsis to accommodate optional arguments passed to other variants of the function.
+For instance, see section [Trading off memory usage for speed](#speed-mapping).
 
 ```{r}
-map_GO <- function(pathway_id) {
+map_GO <- function(pathway_id, ...) {
     select(org.Hs.eg.db::org.Hs.eg.db, pathway_id, "SYMBOL", keytype = "GOALL")[["SYMBOL"]]
 }
 airway <- registerAppOptions(airway, Pathways.map.functions = list(GO = map_GO))
 ```
-
 
 We run a standard GSEA analysis using `r BiocStyle::Biocpkg("fgsea")`.
 
@@ -194,6 +195,54 @@ if (interactive()) {
 
 ```{r, echo=FALSE, out.width="100%"}
 SCREENSHOT("screenshots/integration.png", delay=30)
+```
+
+
+# Trading off memory usage for speed {#speed-mapping}
+
+The function `map_GO()` that we defined earlier to map a pathway identifier to a set of gene identifiers uses the `r BiocStyle::Biocpkg("org.Hs.eg.db")` package and the `?AnnotationDbi::select()` function.
+
+While memory-efficient, the repeated calls to the database of gene annotations introduce a bottleneck that limits the reactivity of the app.
+
+We can restore the speed of the app rendering by trading off an increased memory usage.
+Specifically, we can use the object `pathways` that we also created earlier as a named list of pathway identifiers and character vectors of gene identifiers associated with each pathway.
+
+First, for the app to be self-contained, the list of pathways should be stored within the `airway` object itself.
+
+```{r}
+metadata(airway)[["pathways"]] <- list(GO = pathways)
+```
+
+Then, we can write a new faster function that fetches gene identifiers directly from that list rather than the database.
+The function should take as first argument a single pathway identifier, and the second argument must be called `se` to match the name of the `SummarizedExperiment` object used within the app.
+As a a trade off, the app now relies on the list of pathway annotations being available as an object in the <i class="fab fa-r-project"></i> session, using additional memory for the benefit of dramatically faster access.
+
+```{r}
+map_GO_v2 <- function(pathway_id, se) {
+    metadata(se)[["pathways"]][["GO"]][[pathway_id]]
+}
+airway <- registerAppOptions(airway, Pathways.map.functions = list(GO = map_GO_v2))
+```
+
+We can then launch a new instance of the app, using the same initial configuration, but the update `airway` object.
+
+```{r "faster", message=FALSE, warning=FALSE}
+app <- iSEE(airway, initial = list(
+  PathwaysTable(ResultName="fgsea", PanelWidth = 4L),
+  VolcanoPlot(RowSelectionSource = "PathwaysTable1", PanelWidth = 4L),
+  ComplexHeatmapPlot(RowSelectionSource = "PathwaysTable1",
+      PanelWidth = 4L, PanelHeight = 700L,
+      CustomRows = FALSE, ColumnData = "dex",
+      ClusterRows = TRUE, ClusterRowsDistance = "euclidean", AssayCenterRows = TRUE)
+))
+
+if (interactive()) {
+  shiny::runApp(app)
+}
+```
+
+```{r, echo=FALSE, out.width="100%"}
+SCREENSHOT("screenshots/integration-faster.png", delay=20)
 ```
 
 
