--- a/vignettes/integration.Rmd
+++ b/vignettes/integration.Rmd
@@ -106,11 +106,11 @@ res_limma <- topTable(tmp, sort.by = "P", n = Inf)
 head(res_limma)
 ```
 
-Then, we embed this set of differential expression results in the `?airway` object using the `embedResults()` method.
+Then, we embed this set of differential expression results in the `?airway` object using the `iSEEde::embedContrastResults()` method.
 
 ```{r}
 library("iSEEde")
-airway <- embedResults(res_limma, airway, name = "Limma-Voom", class = "limma")
+airway <- iSEEde::embedContrastResults(res_limma, airway, name = "Limma-Voom", class = "limma")
 rowData(airway)
 ```
 
@@ -141,7 +141,7 @@ We run a standard GSEA analysis using `r BiocStyle::Biocpkg("fgsea")`.
 library("fgsea")
 set.seed(42)
 fgseaRes <- fgsea(pathways = pathways, 
-                  stats    = na.omit(log2FoldChange(rowData(airway)[["iSEEde"]][["Limma-Voom"]])),
+                  stats    = na.omit(log2FoldChange(contrastResults(airway, "Limma-Voom"))),
                   minSize  = 15,
                   maxSize  = 500)
 head(fgseaRes[order(pval), ])
@@ -154,11 +154,25 @@ But first, we reorder the results by increasing p-value, convert the `?data.tabl
 ```{r}
 library("iSEEpathways")
 fgseaRes <- fgseaRes[order(pval), ]
-fgseaRes <- as.data.frame(fgseaRes)
-rownames(fgseaRes) <- fgseaRes$pathway
-airway <- embedPathwaysResults(fgseaRes, airway, name = "fgsea", class = "fgsea")
+airway <- embedPathwaysResults(fgseaRes, airway, name = "fgsea (p-value)", class = "fgsea", pathwayType = "GO")
 airway
 ```
+
+To showcase a choice of pathway analysis results, we repeat the process above, but sorting by a score that combines the log-transformed p-value and the absolute log-transformed fold-change.
+
+```{r}
+stats <- log2FoldChange(contrastResults(airway, "Limma-Voom")) *
+    -log10(pValue(contrastResults(airway, "Limma-Voom")))
+set.seed(42)
+fgseaRes <- fgsea(pathways = pathways, 
+                  stats    = na.omit(stats),
+                  minSize  = 15,
+                  maxSize  = 500)
+fgseaRes <- fgseaRes[order(pval), ]
+airway <- embedPathwaysResults(fgseaRes, airway, name = "fgsea (p-value & fold-change)", class = "fgsea", pathwayType = "GO")
+airway
+```
+
 
 We define and register a function that displays details for the selected Gene Ontology gene set.
 
@@ -219,7 +233,12 @@ As a a trade off, the app now relies on the list of pathway annotations being av
 
 ```{r}
 map_GO_v2 <- function(pathway_id, se) {
-    metadata(se)[["pathways"]][["GO"]][[pathway_id]]
+    pathway_list <- metadata(se)[["pathways"]][["GO"]]
+    if (!pathway_id %in% names(pathway_list)) {
+        warning("Pathway identifier %s not found.", sQuote(pathway_id))
+        return(character(0))
+    }
+    pathway_list[[pathway_id]]
 }
 airway <- registerAppOptions(airway, Pathways.map.functions = list(GO = map_GO_v2))
 ```
@@ -228,7 +247,7 @@ We can then launch a new instance of the app, using the same initial configurati
 
 ```{r "faster", message=FALSE, warning=FALSE}
 app <- iSEE(airway, initial = list(
-  PathwaysTable(ResultName="fgsea", PanelWidth = 4L),
+  PathwaysTable(ResultName="fgsea", Selected = "GO:0046323", PanelWidth = 4L),
   VolcanoPlot(RowSelectionSource = "PathwaysTable1", PanelWidth = 4L),
   ComplexHeatmapPlot(RowSelectionSource = "PathwaysTable1",
       PanelWidth = 4L, PanelHeight = 700L,
