--- a/vignettes/integration.Rmd
+++ b/vignettes/integration.Rmd
@@ -246,7 +246,7 @@ map_GO_v2 <- function(pathway_id, se) {
         warning("Pathway identifier %s not found.", sQuote(pathway_id))
         return(character(0))
     }
-    pathway_list[[pathway_id]]
+    intersect(pathway_list[[pathway_id]], rownames(se))
 }
 airway <- registerAppOptions(airway, Pathways.map.functions = list(GO = map_GO_v2))
 ```
