--- a/vignettes/integration.Rmd
+++ b/vignettes/integration.Rmd
@@ -129,8 +129,9 @@ The function definition must include an ellipsis to accommodate optional argumen
 For instance, see section [Trading off memory usage for speed](#speed-mapping).
 
 ```{r}
-map_GO <- function(pathway_id, ...) {
-    select(org.Hs.eg.db::org.Hs.eg.db, pathway_id, "SYMBOL", keytype = "GOALL")[["SYMBOL"]]
+map_GO <- function(pathway_id, se) {
+    db_symbols <- select(org.Hs.eg.db::org.Hs.eg.db, pathway_id, "SYMBOL", keytype = "GOALL")[["SYMBOL"]]
+    intersect(db_symbols, rownames(se))
 }
 airway <- registerAppOptions(airway, Pathways.map.functions = list(GO = map_GO))
 ```
