--- a/vignettes/integration.Rmd
+++ b/vignettes/integration.Rmd
@@ -263,7 +263,7 @@ We can then launch a new instance of the app, using the same initial configurati
 ```{r "faster", message=FALSE, warning=FALSE}
 app <- iSEE(airway, initial = list(
   PathwaysTable(ResultName="fgsea (p-value)", Selected = "GO:0046323", PanelWidth = 4L),
-  VolcanoPlot(RowSelectionSource = "PathwaysTable1", PanelWidth = 4L),
+  VolcanoPlot(RowSelectionSource = "PathwaysTable1", ColorBy = "Row selection", PanelWidth = 4L),
   ComplexHeatmapPlot(RowSelectionSource = "PathwaysTable1",
       PanelWidth = 4L, PanelHeight = 700L,
       CustomRows = FALSE, ColumnData = "dex",
