--- a/vignettes/integration.Rmd
+++ b/vignettes/integration.Rmd
@@ -209,12 +209,12 @@ airway <- registerAppOptions(airway, PathwaysTable.select.details = go_details)
 ```{r "start", message=FALSE, warning=FALSE}
 app <- iSEE(airway, initial = list(
   PathwaysTable(ResultName="fgsea (p-value)", Selected = "GO:0046323", PanelWidth = 4L),
-  VolcanoPlot(RowSelectionSource = "PathwaysTable1", PanelWidth = 4L),
+  VolcanoPlot(RowSelectionSource = "PathwaysTable1", ColorBy = "Row selection", PanelWidth = 4L),
   ComplexHeatmapPlot(RowSelectionSource = "PathwaysTable1",
       PanelWidth = 4L, PanelHeight = 700L,
       CustomRows = FALSE, ColumnData = "dex",
       ClusterRows = TRUE, ClusterRowsDistance = "euclidean", AssayCenterRows = TRUE),
-  FgseaEnrichmentPlot(PanelWidth = 12L)
+  FgseaEnrichmentPlot(ResultName="fgsea (p-value)", PathwayId = "GO:0046323", PanelWidth = 12L)
 ))
 
 if (interactive()) {
@@ -268,7 +268,7 @@ app <- iSEE(airway, initial = list(
       PanelWidth = 4L, PanelHeight = 700L,
       CustomRows = FALSE, ColumnData = "dex",
       ClusterRows = TRUE, ClusterRowsDistance = "euclidean", AssayCenterRows = TRUE),
-  FgseaEnrichmentPlot(PanelWidth = 12L)
+  FgseaEnrichmentPlot(ResultName="fgsea (p-value)", PathwayId = "GO:0046323", PanelWidth = 12L)
 ))
 
 if (interactive()) {
