--- a/README.Rmd
+++ b/README.Rmd
@@ -47,9 +47,60 @@ BiocManager::install("iSEE/iSEEpathways")
 
 This is a basic example which shows you how to load the package:
 
-```{r example, eval = requireNamespace('iSEEpathways')}
+```{r example, message=FALSE, warning=FALSE, eval = requireNamespace('iSEEpathways')}
 library("iSEEpathways")
-## basic example code
+library("org.Hs.eg.db")
+library("fgsea")
+library("iSEE")
+
+# Example data ----
+
+## Pathways
+pathways <- select(org.Hs.eg.db, keys(org.Hs.eg.db, "SYMBOL"), c("GOALL"), keytype = "SYMBOL")
+pathways <- subset(pathways, ONTOLOGYALL == "BP")
+pathways <- unique(pathways[, c("SYMBOL", "GOALL")])
+pathways <- split(pathways$SYMBOL, pathways$GOALL)
+len_pathways <- lengths(pathways)
+pathways <- pathways[len_pathways > 15 & len_pathways < 500]
+
+## Features
+set.seed(1)
+# simulate a score for all genes found across all pathways
+feature_stats <- rnorm(length(unique(unlist(pathways))))
+names(feature_stats) <- unique(unlist(pathways))
+# arbitrarily select a pathway to simulate enrichment
+pathway_id <- "GO:0046324"
+pathway_genes <- pathways[[pathway_id]]
+# increase score of genes in the selected pathway to simulate enrichment
+feature_stats[pathway_genes] <- feature_stats[pathway_genes] + 1
+
+# fgsea ----
+
+set.seed(42)
+fgseaRes <- fgsea(pathways = pathways, 
+                  stats    = feature_stats,
+                  minSize  = 15,
+                  maxSize  = 500)
+head(fgseaRes[order(pval), ])
+
+# iSEE ---
+
+ngenes <- length(feature_stats)
+cnts <- matrix(rnbinom(n=ngenes*2, mu=100, size=1/0.5), nrow=ngenes)
+rownames(cnts) <- names(feature_stats)
+se <- SummarizedExperiment(assay = list(counts = cnts))
+
+se <- embedPathwaysResults(fgseaRes, se, name = "fgsea", class = "fgsea", pathwayType = "GO",
+                           pathways = pathways, stats = feature_stats)
+
+app <- iSEE(se, initial = list(
+  PathwaysTable(ResultName="fgsea", PanelWidth = 6L),
+  FgseaEnrichmentPlot(ResultName="fgsea", PathwayId="GO:0000002", PanelWidth = 6L)
+))
+
+if (interactive()) {
+  shiny::runApp(app)
+}
 ```
 
 ## Citation
